Use Java utility instead of Apache Commons